--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,18 @@
 		<version>1.3.6.RELEASE</version>
 	</parent>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<version.compiler.plugin>3.5.1</version.compiler.plugin>
+		<version.war.plugin>2.5</version.war.plugin>
+
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+
+		<java.version>1.8</java.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
